# Spinning_Rat

./: CMakeLists.txt
includes/glad/: glad.c  glad.h
src/: Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  camera.cpp  camera.hpp  main.cpp  tiny_gltf.h
